Update and rename deepseek_html_20250707_e92650.html to index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         
         /* 导航栏 */
-        .navbar {
+        。navbar {
             background: linear-gradient(to right, var(--dark), var(--primary));
             padding: 1rem 5%;
             position: fixed;
